Set the project up for first deployment - Added a reCaptcha for user creation (fixes #5) - Modified the reCaptcha library to manage passing through a Proxy - Removed automatic language from user parameters language selection - Added a user notification session value to replace Limesurvey's flash message (fixes #38), which is used to inform about success/failure on user creation (fixes #15) - Fixed text in used forms to be center aligned

--- a/user/styles/default/userstyle.css
+++ b/user/styles/default/userstyle.css
@@ -137,6 +137,13 @@ div.messagebox .header {
   display: none;
 }
 
+/**************************************/
+/* For the reCaptcha at user creation */
+/**************************************/
+#recaptcha_widget_div {
+    margin-left: 170px;
+}
+
 /*************************************************/
 /* Rendering questions, as returned by qanda.php */
 /*************************************************/
@@ -293,7 +300,22 @@ table.ui-datepicker-calendar th.ui-datepicker-week-end {
 /*********************/
 /* Login Form Styles */
 /*********************/
-#loginform, #newuserform {
+#userNotification {
+	width: 914px;
+	border: 1px solid #cc0000;
+    border-top: none;
+	text-align: center;
+	padding: 15px 10px;
+	margin: 0px 12px;
+}
+
+#userNotification p {
+	margin: 6px;
+}
+/*********************/
+/* Login Form Styles */
+/*********************/
+#loginform, #newuserform, #forgotpassword {
 	background-color: white;
 	border: 1px solid #eaecef;
 	margin-left: auto;
@@ -303,6 +325,10 @@ table.ui-datepicker-calendar th.ui-datepicker-week-end {
 	padding-top: 12px;
 	padding-bottom: 12px;
 	width: 600px;
+}
+
+#loginform p, #newuserform p, #forgotpassword p {
+	text-align: center;
 }
 
 #newuserform li label:first-child {
